// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App Done loading 1`] = `
<div
  className="App"
>
  <nav
    className="navbar navbar-default navbar-fixed-top navbar-inverse"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          href="/"
          onClick={[Function]}
        >
          Bonsai
        </a>
        <p
          className="navbar-text"
        >
          Trim your dependency trees
        </p>
      </div>
      <ul
        className="nav navbar-nav navbar-right"
      >
        <li>
          <a
            className="navbar-link"
            href="https://pinterest.github.io/bonsai/"
          >
            Docs
          </a>
        </li>
        <li>
          <a
            className="navbar-link"
            href="https://github.com/pinterest/bonsai"
          >
            Github
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="AppFixed"
  >
    <div
      className="AppView"
    >
      <aside
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              onClick={[Function]}
              style={undefined}
            >
              <input
                className="form-control"
                id="drag-drop-upload"
                onChange={[Function]}
                style={
                  Object {
                    "display": "none",
                  }
                }
                type="file"
              />
            </div>
          </div>
        </div>
      </aside>
      <main
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          />
        </div>
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          />
        </div>
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          />
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`Storyshots App Loading up a file 1`] = `
<div
  className="App"
>
  <nav
    className="navbar navbar-default navbar-fixed-top navbar-inverse"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          href="/"
          onClick={[Function]}
        >
          Bonsai
        </a>
        <p
          className="navbar-text"
        >
          Trim your dependency trees
        </p>
      </div>
      <ul
        className="nav navbar-nav navbar-right"
      >
        <li>
          <a
            className="navbar-link"
            href="https://pinterest.github.io/bonsai/"
          >
            Docs
          </a>
        </li>
        <li>
          <a
            className="navbar-link"
            href="https://github.com/pinterest/bonsai"
          >
            Github
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="AppFixed"
  >
    <div
      className="AppView"
    >
      <aside
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              onClick={[Function]}
              style={undefined}
            >
              <input
                className="form-control"
                id="drag-drop-upload"
                onChange={[Function]}
                style={
                  Object {
                    "display": "none",
                  }
                }
                type="file"
              />
            </div>
          </div>
        </div>
      </aside>
      <p
        className="center-block"
      >
        <em>
          Loading...
        </em>
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots App No filename, empty list 1`] = `
<div
  className="App"
>
  <nav
    className="navbar navbar-default navbar-fixed-top navbar-inverse"
  >
    <div
      className="container-fluid"
    >
      <div
        className="navbar-header"
      >
        <a
          className="navbar-brand"
          href="/"
          onClick={[Function]}
        >
          Bonsai
        </a>
        <p
          className="navbar-text"
        >
          Trim your dependency trees
        </p>
      </div>
      <ul
        className="nav navbar-nav navbar-right"
      >
        <li>
          <a
            className="navbar-link"
            href="https://pinterest.github.io/bonsai/"
          >
            Docs
          </a>
        </li>
        <li>
          <a
            className="navbar-link"
            href="https://github.com/pinterest/bonsai"
          >
            Github
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="AppFixed"
  >
    <div
      className="AppView"
    >
      <aside
        className="container-fluid"
      >
        <div
          className="row"
        >
          <div
            className="col-sm-12"
          >
            <div
              onClick={[Function]}
              style={undefined}
            >
              <input
                className="form-control"
                id="drag-drop-upload"
                onChange={[Function]}
                style={
                  Object {
                    "display": "none",
                  }
                }
                type="file"
              />
            </div>
          </div>
        </div>
      </aside>
    </div>
  </div>
</div>
`;

exports[`Storyshots BlacklistTable Empty data 1`] = `null`;

exports[`Storyshots BlacklistTable Empty list 1`] = `null`;

exports[`Storyshots BlacklistTable Module with no children removed 1`] = `
<div
  className="panel panel-danger"
>
  <div
    className="panel-heading"
  >
    1 Modules Ignored
  </div>
  <table
    cellPadding="0"
    cellSpacing="0"
    className="table table-hover"
  >
    <thead>
      <tr>
        <th />
        <th>
          Name
        </th>
        <th
          className="numeric"
        >
          Size
        </th>
        <th
          className="numeric"
        >
          Dependants
        </th>
        <th
          className="numeric"
        >
          Imports
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        className="OffsetPageSection"
        id="300"
        tabIndex={-1}
      >
        <td
          className="vert-align"
        />
        <td
          className="vert-align"
        >
          Module One-B
        </td>
        <td
          className="vert-align numeric"
        >
          <span
            title="300 bytes"
          >
            300 B
          </span>
        </td>
        <td
          className="vert-align numeric"
        >
          <div
            className="btn-group"
            style={undefined}
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btn btn-link dropdown-toggle"
              data-toggle="dropdown"
              disabled="disabed"
              onClick={null}
              type="button"
            >
              0
               
              <span
                className="caret"
              />
            </button>
          </div>
        </td>
        <td
          className="vert-align numeric"
        >
          <div
            className="btn-group"
            style={undefined}
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btn btn-link dropdown-toggle"
              data-toggle="dropdown"
              disabled="disabed"
              onClick={null}
              type="button"
            >
              0
               
              <span
                className="caret"
              />
            </button>
          </div>
        </td>
        <td
          className="vert-align"
        >
          <button
            className="btn btn-danger"
            disabled={null}
            onClick={[Function]}
            style={null}
            type="button"
          >
            Restore
          </button>
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
        <th
          className="numeric"
        >
          Removed Modules
        </th>
        <td
          className="numeric"
        >
          1
        </td>
        <td
          colSpan="3"
        />
      </tr>
      <tr>
        <th />
        <th
          className="numeric"
        >
          Total Size
        </th>
        <td
          className="numeric"
        >
          <span
            title="300 bytes"
          >
            300 B
          </span>
        </td>
        <td
          colSpan="3"
        />
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Storyshots BlacklistTable Module with some children removed 1`] = `
<div
  className="panel panel-danger"
>
  <div
    className="panel-heading"
  >
    3 Modules Ignored
  </div>
  <table
    cellPadding="0"
    cellSpacing="0"
    className="table table-hover"
  >
    <thead>
      <tr>
        <th />
        <th>
          Name
        </th>
        <th
          className="numeric"
        >
          Size
        </th>
        <th
          className="numeric"
        >
          Dependants
        </th>
        <th
          className="numeric"
        >
          Imports
        </th>
        <th />
      </tr>
    </thead>
    <tbody>
      <tr
        className="OffsetPageSection"
        id="1"
        tabIndex={-1}
      >
        <td
          className="vert-align"
        />
        <td
          className="vert-align"
        >
          Entry One
        </td>
        <td
          className="vert-align numeric"
        >
          <span
            title="100 bytes"
          >
            100 B
          </span>
        </td>
        <td
          className="vert-align numeric"
        >
          <div
            className="btn-group"
            style={undefined}
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btn btn-link dropdown-toggle"
              data-toggle="dropdown"
              disabled="disabed"
              onClick={null}
              type="button"
            >
              0
               
              <span
                className="caret"
              />
            </button>
          </div>
        </td>
        <td
          className="vert-align numeric"
        >
          <div
            className="btn-group"
            style={undefined}
          >
            <button
              aria-expanded={false}
              aria-haspopup="true"
              className="btn btn-link dropdown-toggle"
              data-toggle="dropdown"
              disabled="disabed"
              onClick={null}
              type="button"
            >
              0
               
              <span
                className="caret"
              />
            </button>
          </div>
        </td>
        <td
          className="vert-align"
        >
          <button
            className="btn btn-danger"
            disabled={null}
            onClick={[Function]}
            style={null}
            type="button"
          >
            Restore
          </button>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr>
        <td
          colSpan="6"
        >
          <button
            className="btn btn-default btn-xs"
            disabled={null}
            onClick={[Function]}
            style={null}
            type="button"
          >
            <span
              aria-hidden="true"
              className="glyphicon glyphicon-triangle-right"
            />
            Show 
            2
             more removed modules
          </button>
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr>
        <th />
        <th
          className="numeric"
        >
          Removed Modules
        </th>
        <td
          className="numeric"
        >
          3
        </td>
        <td
          colSpan="3"
        />
      </tr>
      <tr>
        <th />
        <th
          className="numeric"
        >
          Total Size
        </th>
        <td
          className="numeric"
        >
          <span
            title="1,000 bytes"
          >
            1 KB
          </span>
        </td>
        <td
          colSpan="3"
        />
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`Storyshots Bootstrap/Button Block 1`] = `
<button
  className="btn btn-default btn-block"
  disabled={null}
  onClick={[Function]}
  style={null}
  type="button"
>
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button Disabled 1`] = `
<button
  className="btn btn-default"
  disabled="disabed"
  onClick={null}
  style={null}
  type="button"
>
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button Disabled Success 1`] = `
<button
  className="btn btn-success"
  disabled="disabed"
  onClick={null}
  style={null}
  type="button"
>
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button Large 1`] = `
<button
  className="btn btn-default btn-lg"
  disabled={null}
  onClick={[Function]}
  style={null}
  type="button"
>
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button Success 1`] = `
<button
  className="btn btn-success"
  disabled={null}
  onClick={[Function]}
  style={null}
  type="button"
>
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/Button With onClick 1`] = `
<button
  className="btn btn-default"
  disabled={null}
  onClick={[Function]}
  style={null}
  type="button"
>
  Click Me!
</button>
`;

exports[`Storyshots Bootstrap/CloseButton Disabled 1`] = `
<div
  style={
    Object {
      "background": "#ddd",
      "height": "100px",
      "width": "100px",
    }
  }
>
  <button
    aria-label="Close"
    className="close"
    disabled="disabed"
    onClick={null}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/CloseButton With onClick 1`] = `
<div
  style={
    Object {
      "background": "#ddd",
      "height": "100px",
      "width": "100px",
    }
  }
>
  <button
    aria-label="Close"
    className="close"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
    >
      ×
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic Warning 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-warning dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic align right 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic custom style 1`] = `
<div
  className="btn-group"
  style={
    Object {
      "background": "red",
      "padding": "10px",
    }
  }
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Basic disabled 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled="disabed"
    onClick={null}
    type="button"
  >
    Show flyout
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown List Content 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    Show list
     
    <span
      className="caret"
    />
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    className="btn btn-default"
    disabled={null}
    onClick={[Function]}
    style={null}
    type="button"
  >
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
      className="caret"
    />
    <span
      className="sr-only"
    >
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ Color 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    className="btn btn-success"
    disabled={null}
    onClick={[Function]}
    style={null}
    type="button"
  >
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-success dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
      className="caret"
    />
    <span
      className="sr-only"
    >
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ Glyph 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    className="btn btn-default"
    disabled={null}
    onClick={[Function]}
    style={null}
    type="button"
  >
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
      className="glyphicon glyphicon-star"
    />
    <span
      className="sr-only"
    >
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Dropdown Split Button w/ List Content 1`] = `
<div
  className="btn-group"
  style={undefined}
>
  <button
    className="btn btn-default"
    disabled={null}
    onClick={[Function]}
    style={null}
    type="button"
  >
    Show list
  </button>
  <button
    aria-expanded={false}
    aria-haspopup="true"
    className="btn btn-default dropdown-toggle"
    data-toggle="dropdown"
    disabled={null}
    onClick={[Function]}
    type="button"
  >
    <span
      aria-hidden="true"
      className="caret"
    />
    <span
      className="sr-only"
    >
      expand
    </span>
  </button>
</div>
`;

exports[`Storyshots Bootstrap/Link Disabled 1`] = `
<a
  className="btn btn-link"
  disabled="disabled"
  href="#"
  role="button"
  target={null}
>
  Click Me!
</a>
`;

exports[`Storyshots Bootstrap/Link Disabled Success 1`] = `
<a
  className="btn btn-success"
  disabled="disabled"
  href="#"
  role="button"
  target={null}
>
  Click Me!
</a>
`;

exports[`Storyshots Bootstrap/Link Large 1`] = `
<a
  className="btn btn-link btn-lg"
  disabled={null}
  href="javascript: alert('Linked!');"
  role="button"
  target={null}
>
  Click Me!
</a>
`;

exports[`Storyshots Bootstrap/Link Opens new tab 1`] = `
<a
  className="btn btn-link"
  disabled={null}
  href="example.com"
  role="button"
  target="_blank"
>
  <span
    className="glyphicon glyphicon-new-window"
  />
   Open External Site
</a>
`;

exports[`Storyshots Bootstrap/Link Success 1`] = `
<a
  className="btn btn-success"
  disabled={null}
  href="javascript: alert('Linked!');"
  role="button"
  target={null}
>
  Click Me!
</a>
`;

exports[`Storyshots Bootstrap/Link With href 1`] = `
<a
  className="btn btn-link"
  disabled={null}
  href="javascript: alert('Linked!');"
  role="button"
  target={null}
>
  Click Me!
</a>
`;

exports[`Storyshots Bootstrap/Panel Body only 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-body"
  >
    Panel content
  </div>
</div>
`;

exports[`Storyshots Bootstrap/Panel With React.Node heading 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <h2>
      Panel Title
    </h2>
  </div>
  <div
    className="panel-body"
  >
    Panel content
  </div>
</div>
`;

exports[`Storyshots Bootstrap/Panel With different Types 1`] = `
<div>
  <div
    className="panel panel-default"
  >
    <div
      className="panel-heading"
    >
      Default Panel Title
    </div>
    <div
      className="panel-body"
    >
      Panel content
    </div>
  </div>
  <div
    className="panel panel-primary"
  >
    <div
      className="panel-heading"
    >
      Primary Panel Title
    </div>
    <div
      className="panel-body"
    >
      Panel content
    </div>
  </div>
  <div
    className="panel panel-success"
  >
    <div
      className="panel-heading"
    >
      Success Panel Title
    </div>
    <div
      className="panel-body"
    >
      Panel content
    </div>
  </div>
  <div
    className="panel panel-info"
  >
    <div
      className="panel-heading"
    >
      Info Panel Title
    </div>
    <div
      className="panel-body"
    >
      Panel content
    </div>
  </div>
  <div
    className="panel panel-warning"
  >
    <div
      className="panel-heading"
    >
      Warning Panel Title
    </div>
    <div
      className="panel-body"
    >
      Panel content
    </div>
  </div>
  <div
    className="panel panel-danger"
  >
    <div
      className="panel-heading"
    >
      Danger Panel Title
    </div>
    <div
      className="panel-body"
    >
      Panel content
    </div>
  </div>
</div>
`;

exports[`Storyshots Bootstrap/Panel With list-group child 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <h2>
      Panel Title
    </h2>
  </div>
  <ul
    className="list-group"
  >
    <li
      className="list-group-item"
    >
      List Item
    </li>
    <li
      className="list-group-item"
    >
      List Item
    </li>
    <li
      className="list-group-item"
    >
      List Item
    </li>
  </ul>
</div>
`;

exports[`Storyshots Bootstrap/Panel With mixed content 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <h2>
      Panel Title
    </h2>
  </div>
  <div
    className="panel-body"
  >
    <p>
      Paragraph content 1
    </p>
  </div>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <th>
          Table Heading
        </th>
        <td>
          Table Cell
        </td>
      </tr>
    </tbody>
  </table>
  <div
    className="panel-body"
  >
    <p>
      Paragraph content 2
    </p>
  </div>
  <ul
    className="list-group"
  >
    <li
      className="list-group-item"
    >
      List Item
    </li>
    <li
      className="list-group-item"
    >
      List Item
    </li>
    <li
      className="list-group-item"
    >
      List Item
    </li>
  </ul>
</div>
`;

exports[`Storyshots Bootstrap/Panel With multiple children 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <h2>
      Panel Title
    </h2>
  </div>
  <div
    className="panel-body"
  >
    <p>
      Panel content 1
    </p>
  </div>
  <div
    className="panel-body"
  >
    <p>
      Panel content 2
    </p>
  </div>
</div>
`;

exports[`Storyshots Bootstrap/Panel With single child 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <h2>
      Panel Title
    </h2>
  </div>
  <div
    className="panel-body"
  >
    <p>
      Panel content
    </p>
  </div>
</div>
`;

exports[`Storyshots Bootstrap/Panel With string heading 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    Panel Title
  </div>
  <div
    className="panel-body"
  >
    Panel content
  </div>
</div>
`;

exports[`Storyshots Bootstrap/Panel With table child 1`] = `
<div
  className="panel panel-default"
>
  <div
    className="panel-heading"
  >
    <h2>
      Panel Title
    </h2>
  </div>
  <table
    className="table"
  >
    <tbody>
      <tr>
        <th>
          Table Heading
        </th>
        <td>
          Table Cell
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots ExternalModuleLink Default 1`] = `
<a
  className="btn btn-link"
  disabled={null}
  href="http://example.com/./app/analytics/modules/AnalyticsMetric/AnalyticsMetric.js"
  role="button"
  target="_blank"
>
  <span
    aria-label="Open in new window"
    className="glyphicon glyphicon-new-window"
  />
</a>
`;

exports[`Storyshots ExternalModuleLink No prefix 1`] = `null`;

exports[`Storyshots FileSelectors - Diff Mode Filename A & B picked 1`] = `
<div
  className="row form-horizontal"
>
  <div
    className="col-sm-11"
  >
    <div
      className="form-group"
    >
      <label
        className="col-sm-1 control-label"
      >
        File A
      </label>
      <div
        className="col-sm-6"
        onClick={[Function]}
      >
        <select
          className="form-control"
          id="data-file-picker"
          onChange={[Function]}
          value="stats-one.json"
        >
          <option
            value=""
          />
          <option
            value="stats.json"
          >
            stats.json
          </option>
        </select>
      </div>
      <div
        className="col-sm-5"
        onClick={[Function]}
      >
        <div
          className="btn-group"
          style={undefined}
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            className="btn btn-default dropdown-toggle"
            data-toggle="dropdown"
            disabled="disabed"
            onClick={null}
            type="button"
          >
            - pick a chunk -
             
            <span
              className="caret"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="col-sm-1 control-label"
      >
        File B
      </label>
      <div
        className="col-sm-6"
        onClick={[Function]}
      >
        <select
          className="form-control"
          id="data-file-picker"
          onChange={[Function]}
          value="stats-two.json"
        >
          <option
            value=""
          />
          <option
            value="stats.json"
          >
            stats.json
          </option>
        </select>
      </div>
      <div
        className="col-sm-5"
        onClick={[Function]}
      >
        <div
          className="btn-group"
          style={undefined}
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            className="btn btn-default dropdown-toggle"
            data-toggle="dropdown"
            disabled="disabed"
            onClick={null}
            type="button"
          >
            - pick a chunk -
             
            <span
              className="caret"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-sm-1"
    onClick={[Function]}
  >
    <div
      className="checkbox"
    >
      <label
        htmlFor="enable-diff"
      >
        <input
          checked={true}
          id="enable-diff"
          onChange={[Function]}
          type="checkbox"
        />
         Diff
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileSelectors - Diff Mode Filename A picked 1`] = `
<div
  className="row form-horizontal"
>
  <div
    className="col-sm-11"
  >
    <div
      className="form-group"
    >
      <label
        className="col-sm-1 control-label"
      >
        File A
      </label>
      <div
        className="col-sm-6"
        onClick={[Function]}
      >
        <select
          className="form-control"
          id="data-file-picker"
          onChange={[Function]}
          value="stats.json"
        >
          <option
            value=""
          />
          <option
            value="stats.json"
          >
            stats.json
          </option>
        </select>
      </div>
      <div
        className="col-sm-5"
        onClick={[Function]}
      >
        <div
          className="btn-group"
          style={undefined}
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            className="btn btn-default dropdown-toggle"
            data-toggle="dropdown"
            disabled="disabed"
            onClick={null}
            type="button"
          >
            - pick a chunk -
             
            <span
              className="caret"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="col-sm-1 control-label"
      >
        File B
      </label>
      <div
        className="col-sm-6"
        onClick={[Function]}
      >
        <select
          className="form-control"
          id="data-file-picker"
          onChange={[Function]}
          value="stats.json"
        >
          <option
            value=""
          />
          <option
            value="stats.json"
          >
            stats.json
          </option>
        </select>
      </div>
      <div
        className="col-sm-5"
        onClick={[Function]}
      >
        <div
          className="btn-group"
          style={undefined}
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            className="btn btn-default dropdown-toggle"
            data-toggle="dropdown"
            disabled="disabed"
            onClick={null}
            type="button"
          >
            - pick a chunk -
             
            <span
              className="caret"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-sm-1"
    onClick={[Function]}
  >
    <div
      className="checkbox"
    >
      <label
        htmlFor="enable-diff"
      >
        <input
          checked={true}
          id="enable-diff"
          onChange={[Function]}
          type="checkbox"
        />
         Diff
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileSelectors - Diff Mode Invalid: empty list, filename picked 1`] = `null`;

exports[`Storyshots FileSelectors - Diff Mode No filename, empty list 1`] = `null`;

exports[`Storyshots FileSelectors - Diff Mode No filename, items in list 1`] = `
<div
  className="row form-horizontal"
>
  <div
    className="col-sm-11"
  >
    <div
      className="form-group"
    >
      <label
        className="col-sm-1 control-label"
      >
        File A
      </label>
      <div
        className="col-sm-6"
        onClick={[Function]}
      >
        <select
          className="form-control"
          id="data-file-picker"
          onChange={[Function]}
          value=""
        >
          <option
            value=""
          />
          <option
            value="stats.json"
          >
            stats.json
          </option>
        </select>
      </div>
      <div
        className="col-sm-5"
        onClick={[Function]}
      >
        <div
          className="btn-group"
          style={undefined}
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            className="btn btn-default dropdown-toggle"
            data-toggle="dropdown"
            disabled="disabed"
            onClick={null}
            type="button"
          >
            - pick a chunk -
             
            <span
              className="caret"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="form-group"
    >
      <label
        className="col-sm-1 control-label"
      >
        File B
      </label>
      <div
        className="col-sm-6"
        onClick={[Function]}
      >
        <select
          className="form-control"
          id="data-file-picker"
          onChange={[Function]}
          value=""
        >
          <option
            value=""
          />
          <option
            value="stats.json"
          >
            stats.json
          </option>
        </select>
      </div>
      <div
        className="col-sm-5"
        onClick={[Function]}
      >
        <div
          className="btn-group"
          style={undefined}
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            className="btn btn-default dropdown-toggle"
            data-toggle="dropdown"
            disabled="disabed"
            onClick={null}
            type="button"
          >
            - pick a chunk -
             
            <span
              className="caret"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-sm-1"
    onClick={[Function]}
  >
    <div
      className="checkbox"
    >
      <label
        htmlFor="enable-diff"
      >
        <input
          checked={true}
          id="enable-diff"
          onChange={[Function]}
          type="checkbox"
        />
         Diff
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileSelectors - Single Mode Filename picked 1`] = `
<div
  className="row form-horizontal"
>
  <div
    className="col-sm-11"
  >
    <div
      className="form-group"
    >
      <label
        className="col-sm-1 control-label"
      >
        Filename
      </label>
      <div
        className="col-sm-11"
        onClick={[Function]}
      >
        <select
          className="form-control"
          id="data-file-picker"
          onChange={[Function]}
          value="stats.json"
        >
          <option
            value=""
          />
          <option
            value="stats.json"
          >
            stats.json
          </option>
        </select>
      </div>
    </div>
    <div
      className="form-group"
      onClick={[Function]}
    >
      <label
        className="col-sm-1 control-label"
      >
        Chunk
      </label>
      <div
        className="col-sm-11"
      >
        <div
          className="btn-group"
          style={undefined}
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            className="btn btn-default dropdown-toggle"
            data-toggle="dropdown"
            disabled="disabed"
            onClick={null}
            type="button"
          >
            - pick a chunk -
             
            <span
              className="caret"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-sm-1"
    onClick={[Function]}
  >
    <div
      className="checkbox"
    >
      <label
        htmlFor="enable-diff"
      >
        <input
          checked={false}
          id="enable-diff"
          onChange={[Function]}
          type="checkbox"
        />
         Diff
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots FileSelectors - Single Mode Invalid: empty list, filename picked 1`] = `null`;

exports[`Storyshots FileSelectors - Single Mode No filename, empty list 1`] = `null`;

exports[`Storyshots FileSelectors - Single Mode No filename, items in list 1`] = `
<div
  className="row form-horizontal"
>
  <div
    className="col-sm-11"
  >
    <div
      className="form-group"
    >
      <label
        className="col-sm-1 control-label"
      >
        Filename
      </label>
      <div
        className="col-sm-11"
        onClick={[Function]}
      >
        <select
          className="form-control"
          id="data-file-picker"
          onChange={[Function]}
          value=""
        >
          <option
            value=""
          />
          <option
            value="stats.json"
          >
            stats.json
          </option>
        </select>
      </div>
    </div>
    <div
      className="form-group"
      onClick={[Function]}
    >
      <label
        className="col-sm-1 control-label"
      >
        Chunk
      </label>
      <div
        className="col-sm-11"
      >
        <div
          className="btn-group"
          style={undefined}
        >
          <button
            aria-expanded={false}
            aria-haspopup="true"
            className="btn btn-default dropdown-toggle"
            data-toggle="dropdown"
            disabled="disabed"
            onClick={null}
            type="button"
          >
            - pick a chunk -
             
            <span
              className="caret"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="col-sm-1"
    onClick={[Function]}
  >
    <div
      className="checkbox"
    >
      <label
        htmlFor="enable-diff"
      >
        <input
          checked={false}
          id="enable-diff"
          onChange={[Function]}
          type="checkbox"
        />
         Diff
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots SortLabel Something else is sorted 1`] = `
<div
  className="text-left"
>
  Size
</div>
`;

exports[`Storyshots SortLabel This field is sorted ASC 1`] = `
<div
  className="text-left"
>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes"
  />
   
  Size
</div>
`;

exports[`Storyshots SortLabel This field is sorted DESC 1`] = `
<div
  className="text-left"
>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-attributes-alt"
  />
   
  Name
</div>
`;

exports[`Storyshots SortLabel This field is type \`alpha\` 1`] = `
<div
  className="text-left"
>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-alphabet"
  />
   
  Name
</div>
`;

exports[`Storyshots SortLabel This field is type \`order\` 1`] = `
<div
  className="text-left"
>
  <span
    aria-hidden="true"
    className="glyphicon glyphicon-sort-by-order"
  />
   
  Rank
</div>
`;

exports[`Storyshots Unit 2.4 Bytes (b) 1`] = `
<span
  title="2 bytes"
>
  2.4 B
</span>
`;

exports[`Storyshots Unit 2.4 Gigabytes (GB) 1`] = `
<span
  title="2,400,000,000 bytes"
>
  2.4 GB
</span>
`;

exports[`Storyshots Unit 2.4 Kilobytes (KB) 1`] = `
<span
  title="2,400 bytes"
>
  2.4 KB
</span>
`;

exports[`Storyshots Unit 2.4 Megabytes (MB) 1`] = `
<span
  title="2,400,000 bytes"
>
  2.4 MB
</span>
`;

exports[`Storyshots Unit 2.4 Terabytes (TB) 1`] = `
<span
  title="2,400,000,000,000 bytes"
>
  2.4 TB
</span>
`;

exports[`Storyshots formatModuleName delegated dll 1`] = `
<span>
  <span>
    delegated ./node_modules/classnames/index.js from dll-reference vendor
  </span>
</span>
`;

exports[`Storyshots formatModuleName loader 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }
    title="./~/html-webpack-plugin/lib/loader.js!./public/index.html"
  >
     
    ./~/html-webpack-plugin/lib/loader.js!
  </span>
  <span
    title="./~/html-webpack-plugin/lib/loader.js!./public/index.html"
  >
    ./public/index.html
  </span>
</span>
`;

exports[`Storyshots formatModuleName loader with query 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }
    title="./node_modules/babel-loader/lib/index.js?{\\"babelrc\\":false,\\"presets\\":[\\"./node_modules/react-scripts/node_modules/babel-preset-react-app/index.js\\"],\\"cacheDirectory\\":true}./node_modules/eslint-loader/index.js!./src/index.js"
  >
     
    ./node_modules/babel-loader/lib/index.js?{"babel…":true}!./node_modules/eslint-loader/index.js!
  </span>
  <span
    title="./node_modules/babel-loader/lib/index.js?{\\"babelrc\\":false,\\"presets\\":[\\"./node_modules/react-scripts/node_modules/babel-preset-react-app/index.js\\"],\\"cacheDirectory\\":true}./node_modules/eslint-loader/index.js!./src/index.js"
  >
    ./src/index.js
  </span>
</span>
`;

exports[`Storyshots formatModuleName main and loader with query 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#aaa",
      }
    }
    title="main ./node_modules/babel-loader/lib/index.js?{\\"babelrc\\":false,\\"presets\\":[\\"./node_modules/react-scripts/node_modules/babel-preset-react-app/index.js\\"],\\"cacheDirectory\\":true}./node_modules/eslint-loader/index.js!./src/index.js"
  >
     
    main ./node_modules/babel-loader/lib/index.js?{"babel…":true}!./node_modules/eslint-loader/index.js!
  </span>
  <span
    title="main ./node_modules/babel-loader/lib/index.js?{\\"babelrc\\":false,\\"presets\\":[\\"./node_modules/react-scripts/node_modules/babel-preset-react-app/index.js\\"],\\"cacheDirectory\\":true}./node_modules/eslint-loader/index.js!./src/index.js"
  >
    ./src/index.js
  </span>
</span>
`;

exports[`Storyshots formatModuleName multi 1`] = `
<span>
  <span>
    multi
  </span>
  <br />
  <span>
    main
  </span>
</span>
`;

exports[`Storyshots formatModuleName node module 1`] = `
<span>
  <span>
    ./~/react-dev-utils/webpackHotDevClient.js
  </span>
</span>
`;

exports[`Storyshots formatModuleName plain filepath 1`] = `
<span>
  <span>
    components/stats/__stories__/formatModuleName.stories.js
  </span>
</span>
`;
